# simlab

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile
docs/: Collision.md
lib/: CMakeLists.txt
lib/include/simlab/: Collision.hpp  Game.hpp  PhysicsManager.hpp  formatter.hpp  simlab.hpp  utils.hpp
lib/include/simlab/core/: Benchmark.hpp  Collision.hpp  Game.hpp  PhysicsManager.hpp  formatter.hpp  utils.hpp
lib/include/simlab/drawables/: BezierCurve.hpp
lib/include/simlab/logger/: Logger.hpp
lib/src/: bezier_curve.cpp  bounce.cpp  cellular_automata.cpp  convway_game_of_life.cpp  maze_automata.cpp  phyllotaxis.cpp  posisson_disc.cpp  template.cpp
lib/src/simlab/: Game.cpp  PhysicsManager.cpp
lib/src/simlab/core/: Game.cpp  PhysicsManager.cpp
lib/src/simlab/drawables/: BezierCurve.cpp
src/consensus/: CMakeLists.txt
src/consensus/src/: main.cpp
tests/: CMakeLists.txt
